# Prism-RAG

./: .gitignore  PROJECT_GUIDE.md  Q1_x6.json  Q1_x6_flag_OFF.json  Q1_x6_flag_ON_B.json  Q1_x6_post_B.json  README.md  analyze_q3_interpretations.py  diff_baselines.py  evaluation_dataset.json  golden_queries.json  post_A_golden.json  post_B_golden.json  post_z.json  pre_phase3.json  rag_eval_final.html  rag_eval_final.json  rag_eval_rbac_v2.html  rag_eval_rbac_v2.json  rag_evaluator.py  rag_golden_eval.py
Excel sheets for Gen-AI chatbot exercise/: 00_README_and_Schema.xlsx  01_Departments.xlsx  (+9 more)
backend/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
backend/config/: _local.yaml  default.yaml
backend/entrypoint/: ingest.py  query.py  seed.py  serve.py
backend/src/: config.py
backend/src/api/: app.py
backend/src/api/routers/: audit.py  auth.py  chat.py  documents.py  graph.py  integrations.py  meta.py  organizations.py  playground.py  sso.py  threads.py  welcome.py
backend/src/auth/: dependencies.py  jwt.py  security.py
backend/src/core/: chat_cache.py  models.py  prompts.py  rate_limit.py  schemas.py  store.py
backend/src/pipelines/: analytics_agent.py  embedding_pipeline.py  fact_extractor.py  generation_pipeline.py  loaders.py  planner.py  planner_DESIGN.md  profiler_DESIGN.md  retrieval_pipeline.py  schema_profiler.py  term_resolver.py
backend/tests/integration/: test_ingest_retrieve.py  test_rbac.py  test_smart_rag.py  test_uploads.py
backend/tests/unit/: test_rrf.py  test_tokenize.py
(+109 files in other folders)
